make ui support category, group, and cosmetic assets